--- a/main.html
+++ b/main.html
@@ -1,47 +1,38 @@
-<!DOCTYPE html>
-
-<form>
+<html>
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+<form action="/submit.php" method="POST">
   <div class="form-group">
-    <label for="first-name-input">First Name</label>
-    <input type="text" class="form-control" id="first-name-input" required>
-    <div class="invalid-feedback">Please enter your first name.</div>
-  </div>
-  <div class="form-group">
-    <label for="last-name-input">Last Name</label>
-    <input type="text" class="form-control" id="last-name-input" required>
-    <div class="invalid-feedback">Please enter your last name.</div>
+    <label for="name-input">Name</label>
+    <input type="text" id="name-input" name="name" class="form-control" required>
+    <div class="invalid-feedback">Please enter your name.</div>
   </div>
   <div class="form-group">
     <label for="email-input">Email</label>
-    <input type="email" class="form-control" id="email-input" required>
+    <input type="email" id="email-input" name="email" class="form-control" required>
     <div class="invalid-feedback">Please enter a valid email address.</div>
   </div>
   <div class="form-group">
-    <label for="college-input">College Name</label>
-    <input type="text" class="form-control" id="college-input" required>
-    <div class="invalid-feedback">Please enter your college name.</div>
+    <label for="phone-input">Phone</label>
+    <input type="tel" id="phone-input" name="phone" class="form-control" required>
+    <div class="invalid-feedback">Please enter your phone number.</div>
   </div>
   <div class="form-group">
-    <label for="roll-no-input">Roll No</label>
-    <input type="number" class="form-control" id="roll-no-input" required>
-    <div class="invalid-feedback">Please enter your roll number.</div>
-  </div>
-  <div class="form-group">
-    <label for="graduation-year-select">Graduation Year</label>
-    <select class="form-control" id="graduation-year-select" required>
-      <option value="">Select</option>
-      <option value="2020">2020</option>
-      <option value="2021">2021</option>
-      <option value="2022">2022</option>
-      <option value="2023">2023</option>
-    </select>
-    <div class="invalid-feedback">Please select your graduation year.</div>
+    <label for="message-input">Message</label>
+    <textarea id="message-input" name="message" class="form-control" rows="4" required></textarea>
+    <div class="invalid-feedback">Please enter your message.</div>
   </div>
   <div class="form-check">
-    <input type="checkbox" class="form-check-input" id="conditions-checkbox" required>
-    <label class="form-check-label" for="conditions-checkbox">I agree to the terms and conditions.</label>
+    <input type="checkbox" id="conditions-checkbox" name="conditions" class="form-check-input" required>
+    <label for="conditions-checkbox" class="form-check-label">I agree to the terms and conditions.</label>
     <div class="invalid-feedback">You must agree to the terms and conditions.</div>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</body>
+</html>
+
+
 
